# Gstreammer-tutorial

./: README.md
GStreamerMediaPlayer/all-out/: CMakeLists.txt
GStreamerMediaPlayer/all-out/include/MediaPlayer/: MediaPlayer.h
GStreamerMediaPlayer/all-out/src/: CMakeLists.txt
GStreamerMediaPlayer/simple/play-audio/: CMakeLists.txt
GStreamerMediaPlayer/simple/playback-tutorial/: CMakeLists.txt
GStreamerMediaPlayer/simple/playback-tutorial/include/: example.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/: gstenumtypes.h  gstmessage.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/app/: app-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/audio/: audio-enumtypes.h  gstaudiodecoder.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/controller/: controller-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/interfaces/: photography-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/mpegts/: gstmpegts-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/pbutils/: pbutils-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/rtp/: gstrtp-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/rtsp/: gstrtsp-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/tag/: tag-enumtypes.h
GStreamerMediaPlayer/simple/playback-tutorial/include/gst/video/: video-enumtypes.h  video-format.h
GStreamerMediaPlayer/simple/playback-tutorial/lib/: libglib-2.0.so.0  libgobject-2.0.so.0.5200.3  libgstapp-1.0.so.0  libgstreamer-1.0.so.0
GStreamerMediaPlayer/simple/playback-tutorial/src/: playback-tutorial-1  playback-tutorial-1.c
